--- a/style.css
+++ b/style.css
@@ -31,13 +31,12 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     color: black;
-    
-    background-color: #c1c0bc;
-
     width: 100%;
     height: 721px;
-
-    padding-top: 9px;
+    padding: 20px;
+    background-image: url('img/nile-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: auto;
 
 }
 
@@ -56,4 +55,13 @@ body {
 
 img{
     margin: 10px;
+}
+
+.fact{
+    margin-left: 30px;
+}
+
+h2{
+    margin:1rem;
+    padding: 1rem;
 }
