--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     height: 721px;
     padding: 20px;
     background-image: url('img/nile-bg.jpg');
-
+    margin-bottom: 30px;
 }
 
 .datos{
